--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body {
   background-color: #0f2a0e;
   background-image: url(../img/top-img.png), url(../img/background-circle.png);
   background-repeat: no-repeat;
-  background-position: center 16px, left 560px;
+  background-position: center 16px, 47% 560px;
   font-family: "Montserrat Alternates", sans-serif;
   font-style: normal;
 }
@@ -19,6 +19,15 @@ body {
   margin: 0 auto;
   box-sizing: border-box;
 }
+
+label,
+a,
+button {
+  /*при наведении на стрелки или переключатели - курсор изменится*/
+  cursor: pointer;
+  caret-color: transparent;
+}
+
 li {
   list-style: none;
 }
@@ -258,7 +267,6 @@ li {
 }
 
 .ribbon-nft {
-  outline: 1px solid red;
   height: 80px;
   width: 1955px;
   background: linear-gradient(135deg, #0f2a0e 0%, #57ff51 100%);
@@ -438,6 +446,7 @@ li {
 }
 
 .creaty-list {
+  margin: 0 auto 45px;
 }
 .creaty-list__discription {
   min-height: 73px;
@@ -557,4 +566,179 @@ li {
 .creaty-list__card-item:nth-child(3) .card-item__link::after {
   top: 7px;
   right: -54px;
+}
+
+.clients {
+}
+.clients__title {
+  background: linear-gradient(
+    135deg,
+    #e3e3e3 0.7%,
+    #e3e3e3 55.21%,
+    #e3e3e3 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  margin: 0 0 30px;
+}
+
+#slider {
+  /*положение слайдера*/
+  position: relative;
+  text-align: center;
+  margin: 0 auto;
+}
+#slides article {
+  /*все изображения справа друг от доруга*/
+  width: 20%;
+  float: left;
+}
+#slides .image {
+  /*устанавливает общий размер блока с изображениями*/
+  width: 500%;
+  line-height: 0;
+}
+#overflow {
+  /*сркывает все, что находится за пределами этого блока*/
+  width: 100%;
+  overflow: hidden;
+}
+.clients__slider-item {
+  width: 100%;
+  height: 316px;
+}
+.clients__slider-item img {
+  width: 89px;
+  height: 89px;
+  display: block;
+  margin: 0 auto 16px;
+  border-radius: 100%;
+}
+.clients__slider-txt {
+  text-align: left;
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  margin: 0 0 20px;
+}
+
+.clients__slider-reating {
+  width: 128px;
+  height: 22px;
+  margin: 0 auto 16px;
+}
+
+.slider-reating-active > path {
+  fill: #57ff51;
+}
+.clients__slider-name {
+  font-family: "Open Sans";
+  font-size: 14.222px;
+  font-weight: 600;
+  line-height: 21.333px;
+  background: linear-gradient(
+    135deg,
+    #e3e3e3 0.7%,
+    #e3e3e3 55.21%,
+    #e3e3e3 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.clients__slider-profession {
+  display: block;
+  font-family: "Open Sans";
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 19.5px;
+  background: linear-gradient(
+    135deg,
+    #e3e3e3 0.7%,
+    #e3e3e3 55.21%,
+    #e3e3e3 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#desktop:checked ~ #slider {
+  /*размер всего слайдера*/
+  max-width: 320px; /*максимальнная длинна*/
+  min-height: 315px;
+  margin: 0 0 72px;
+}
+/*настройка переключения и положения для левой стрелки*/
+/*если свич1-5 активны, то идет обращение к лейблу из блока с id контролс*/
+#switch1:checked ~ #controls label:nth-child(5),
+#switch2:checked ~ #controls label:nth-child(1),
+#switch3:checked ~ #controls label:nth-child(2),
+#switch4:checked ~ #controls label:nth-child(3),
+#switch5:checked ~ #controls label:nth-child(4) {
+  position: absolute;
+  bottom: -20px;
+  left: 128.5px;
+  background: url("../img/prev.svg") no-repeat; /*заливка фона картинкой без повторений*/
+  display: block;
+  height: 20px;
+  width: 20px;
+}
+/*настройка переключения и положения для правой стрелки*/
+#switch1:checked ~ #controls label:nth-child(2),
+#switch2:checked ~ #controls label:nth-child(3),
+#switch3:checked ~ #controls label:nth-child(4),
+#switch4:checked ~ #controls label:nth-child(5),
+#switch5:checked ~ #controls label:nth-child(1) {
+  background: url("../img/next.svg") no-repeat; /*заливка фона картинкой без повторений*/
+  position: absolute;
+  bottom: -20px;
+  right: 128.5px;
+  display: block;
+  height: 20px;
+  width: 20px;
+}
+.all input {
+  /*скрывает стандартные инпуты (чекбоксы) на странице*/
+  display: none;
+}
+/*позиция изображения при активации переключателя*/
+#switch1:checked ~ #slides .image {
+  margin-left: 0;
+}
+#switch2:checked ~ #slides .image {
+  margin-left: -100%;
+}
+#switch3:checked ~ #slides .image {
+  margin-left: -200%;
+}
+#switch4:checked ~ #slides .image {
+  margin-left: -300%;
+}
+#switch5:checked ~ #slides .image {
+  margin-left: -400%;
+}
+#controls {
+  /*положение блока всех управляющих элементов*/
+  margin: -25% 0 0 0;
+  width: 100%;
+  height: 50px;
+}
+#slides .image {
+  /*анимация пролистывания изображений*/
+  transition: all 1s cubic-bezier(0.42, 0, 0.58, 1);
+}
+#controls label:hover {
+  /*прозрачность стрелок при наведении*/
+  opacity: 0.6;
+}
+#controls label {
+  /*прозрачность стрелок при отводе курсора*/
+  transition: opacity 0.2s ease-out;
 }
