--- a/style/style.css
+++ b/style/style.css
@@ -673,7 +673,7 @@ li {
   /*размер всего слайдера*/
   max-width: 320px; /*максимальнная длинна*/
   min-height: 315px;
-  margin: 0 0 72px;
+  margin: 0 auto 72px;
 }
 /*настройка переключения и положения для левой стрелки*/
 /*если свич1-5 активны, то идет обращение к лейблу из блока с id контролс*/
@@ -683,8 +683,8 @@ li {
 #switch4:checked ~ #controls label:nth-child(3),
 #switch5:checked ~ #controls label:nth-child(4) {
   position: absolute;
-  bottom: -20px;
-  left: 128.5px;
+  bottom: 0;
+  left: 0;
   background: url("../img/prev.svg") no-repeat; /*заливка фона картинкой без повторений*/
   display: block;
   height: 20px;
@@ -698,8 +698,8 @@ li {
 #switch5:checked ~ #controls label:nth-child(1) {
   background: url("../img/next.svg") no-repeat; /*заливка фона картинкой без повторений*/
   position: absolute;
-  bottom: -20px;
-  right: 128.5px;
+  bottom: 0;
+  right: 0;
   display: block;
   height: 20px;
   width: 20px;
@@ -725,10 +725,10 @@ li {
   margin-left: -400%;
 }
 #controls {
-  /*положение блока всех управляющих элементов*/
-  margin: -25% 0 0 0;
-  width: 100%;
-  height: 50px;
+  position: relative;
+  width: 65px;
+  height: 20px;
+  margin: 0 auto;
 }
 #slides .image {
   /*анимация пролистывания изображений*/
@@ -741,4 +741,83 @@ li {
 #controls label {
   /*прозрачность стрелок при отводе курсора*/
   transition: opacity 0.2s ease-out;
+}
+.questions {
+}
+.questions__title {
+  margin: 0 0 20px;
+  text-align: right;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  background: linear-gradient(
+    135deg,
+    #e3e3e3 0.7%,
+    #e3e3e3 55.21%,
+    #e3e3e3 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.accordion {
+  max-width: 345px;
+  margin: 0 0 41px;
+}
+.accordion__item {
+  margin: 0 0 5px;
+}
+.accordion__title {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  padding: 9px 10px;
+  color: #000;
+  font-family: "Open Sans";
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
+  border-radius: 3.026px;
+  border: 0.303px solid #0f2a0e;
+  background: linear-gradient(135deg, #07c800 0%, #57ff51 61.26%, #07c800 100%);
+}
+.accordion__title::after {
+  content: "+";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 8px;
+  line-height: 12px;
+  color: #fff;
+  position: absolute;
+  top: 11px;
+  right: 8px;
+  width: 10px;
+  height: 10px;
+  border-radius: 3px;
+  background: #0f2a0e;
+  box-sizing: border-box;
+}
+.accordion__input:checked ~ .accordion__title::after {
+  content: "-";
+}
+.accordion__input {
+  width: 0;
+  height: 0;
+  position: absolute;
+  -webkit-appearance: none;
+  appearance: none;
+}
+.accordion__input:checked ~ .accordion__body {
+  display: block;
+}
+.accordion__body {
+  display: none;
+  padding: 0 8px;
+  color: rgba(255, 255, 255, 0.85);
+  font-family: "Open Sans";
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
 }
