--- a/style/style.css
+++ b/style/style.css
@@ -6,9 +6,10 @@
 
 body {
   background-color: #0f2a0e;
-  background-image: url(../img/top-img.png), url(../img/background-circle.png);
+  background-image: url(../img/top-img.png), url(../img/background-circle.png),
+    url(../img/background-circle.png), url(../img/background-circle.png);
   background-repeat: no-repeat;
-  background-position: center 16px, 47% 560px;
+  background-position: center 16px, 47% 560px, 5% 55%, 111% 94%;
   font-family: "Montserrat Alternates", sans-serif;
   font-style: normal;
 }
@@ -110,9 +111,25 @@ li {
 #menu-switch {
   display: none;
 }
-#menu-switch:checked ~ .menu-list {
+#menu-switch:checked ~ .mobile-list {
   visibility: visible;
+  background: rgba(0, 0, 0, 0.6);
+}
+#menu-switch:checked ~ .mobile-list > .menu-list__wrp {
+  background-color: #0f2a0e;
   opacity: 1;
+}
+.mobile-list {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  transition: all 0.5s ease;
+}
+#menu-switch:checked body {
+  opacity: 0.5;
 }
 #menu-switch:checked ~ .menu-icon > span {
   background: transparent;
@@ -140,54 +157,82 @@ li {
   opacity: 0.7;
   z-index: 3;
 }
-.menu-list {
-  background: -o-linear-gradient(8.45deg, #ffc83e 33.93%, #ff7347 73.78%);
-  background: linear-gradient(81.55deg, #ffc83e 33.93%, #ff7347 73.78%);
-  max-width: 360px;
+.menu-list__wrp {
+  max-width: 203px;
   width: 100%;
-  height: 270px;
-  border-radius: 8px;
+  height: 100vh;
   position: absolute;
-  left: 0px;
+  right: 0px;
   z-index: 2;
-  top: 14px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 20px;
-  gap: 8px;
-  visibility: hidden;
-  opacity: 0.1;
-  -webkit-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
+  top: 0;
+  padding: 22px 15px;
   transition: all 0.5s ease;
+  opacity: 0;
+}
+.menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 25px;
+  margin: 0 0 60px;
 }
 .menu-list__item {
-  max-width: 120px;
+  max-width: 85px;
   width: 100%;
-  min-height: 17px;
-  text-align: center;
+  min-height: 24px;
+  text-align: left;
+}
+.menu-list__link {
+  display: block;
+  color: #ececec;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
 }
 .menu-list__item:first-child {
-  margin: 0 0 16px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 36px;
+}
+.menu-list-title {
+  display: block;
+}
+.menu-list__btn-wrp {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 102px;
+  max-width: 173px;
+  width: 100%;
+}
+.social-logo-wrp {
+  max-width: 76px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu-btn-login {
+  color: #000;
+  font-family: "Open Sans";
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 30px;
+  padding: 9px 29px 9px 40px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(135deg, #07c800 0%, #57ff51 61.26%, #07c800 100%);
 }
 
 .top-promo {
   margin: 0 auto 43px;
   padding-top: 350px;
 }
-.top-promo__wrp-discription {
-}
+
 .top-promo__title {
   max-width: 294px;
   width: 1005;
@@ -383,10 +428,11 @@ li {
 }
 .icon-panel__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   row-gap: 21px;
+  column-gap: 8px;
 }
 .icon-panel__item,
 .icon-panel__card {
@@ -771,10 +817,8 @@ li {
   max-width: 345px;
   margin: 0 0 41px;
 }
-.accordion__item {
-  margin: 0 0 5px;
-}
 .accordion__title {
+  margin: 0 0 3px;
   position: relative;
   display: block;
   box-sizing: border-box;
@@ -819,9 +863,12 @@ li {
 .accordion__input:checked ~ .accordion__body {
   display: block;
 }
+.accordion__input:checked ~ .accordion__title {
+  margin: 0;
+}
 .accordion__body {
   display: none;
-  padding: 0 8px;
+  padding: 4px 10px;
   color: rgba(255, 255, 255, 0.85);
   font-family: "Open Sans";
   font-size: 10px;
@@ -834,6 +881,8 @@ li {
   background-color: #123812;
 }
 .page-footer__menu-wrp {
+  max-width: 363px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -849,21 +898,34 @@ li {
   display: block;
 }
 .page-footer__nav-link-wrp {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   max-width: 46px;
   width: 100%;
   min-height: 41px;
 }
 .page-footer__social-link-wrp {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   max-width: 57px;
   width: 100%;
   min-height: 41px;
 }
 .page-footer__telephone-link-wrp {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   max-width: 93px;
   width: 100%;
   min-height: 26px;
 }
 .page-footer__link {
+  display: flex;
   font-size: 8px;
   font-weight: 700;
   line-height: 12px;
