--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ body {
   background-image: url(../img/top-img.png), url(../img/background-circle.png),
     url(../img/background-circle.png), url(../img/background-circle.png);
   background-repeat: no-repeat;
-  background-position: center 16px, 47% 560px, 5% 55%, 111% 94%;
+  background-position: center 16px, 47% 560px, 5% 1500px, 111% 2565px;
   font-family: "Montserrat Alternates", sans-serif;
   font-style: normal;
 }
@@ -396,7 +396,7 @@ li {
   font-weight: 400;
   line-height: 30px;
   border-radius: 10px;
-  transition: 0.5s ease-in-out;
+  transition: all 0.5s ease;
 }
 #basik + label {
   padding: 29px 31px 29px 25px;
